--- a/index.html
+++ b/index.html
@@ -1,11 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>Practica 2 Módulo 3</title>
 </head>
+
 <body>
+    <main>
+        <section class="p-5">
+            <h1>Ejercicio 42</h1>
+            <div class="d-flex">
+                <div class="col-3 px-4">
+                    <form action="">
+                        <div class="mb-3">
+                            <label for="txt-codigo" class="form-label">Código</label>
+                            <input type="text" class="form-control" id="txt-codigo">
+                            <div id="msg-codigo" class="form-text text-danger"></div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="txt-nombre" class="form-label">Nombre</label>
+                            <input type="text" class="form-control" id="txt-nombre">
+                            <div id="msg-nombre" class="form-text text-danger"></div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="txt-valor-credito" class="form-label">Valor crédito</label>
+                            <input type="number" class="form-control" id="txt-valor-credito">
+                            <div id="msg-valor-credito" class="form-text text-danger"></div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="txt-nro-creditos" class="form-label">Nro. Créditos</label>
+                            <input type="number" class="form-control" id="txt-nro-creditos">
+                            <div id="msg-nro-creditos" class="form-text text-danger"></div>
+                        </div>
+                        <div class="mb-3">
+                            <label for="txt-valor-recargo" class="form-label">Valor recargo</label>
+                            <input type="number" class="form-control" id="txt-valor-recargo">
+                            <div id="msg-valor-recargo" class="form-text text-danger"></div>
+                        </div>
+                        <div class="text-end">
+                            <button class="btn btn-primary">Inscribir</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-9">
+                    <div class="d-flex justify-content-between">
+                        <div><h3>Listado de estudiantes inscritos</h3></div>
+                        <div>
+                            <table class="table table-bordered">
+                                <tr>
+                                    <th>Total:</th>
+                                    <td id="total">0$</td>
+                                    <th>Promedio</th>
+                                    <td id="promedio">0$</td>
+                                </tr>
+                            </table>
+                        </div>
+                    </div>
+                    
+                    <table id="tbl-inscritos" class="table table-bordered mt-3">
+                        <thead>
+                            <tr>
+                                <th>Código</th>
+                                <th>Nombre</th>
+                                <th>Valor crédito</th>
+                                <th>Nro. Créditos</th>
+                                <th>Valor encargo</th>
+                                <th>Total pagar</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td colspan="6" class="text-center fw-bold">No hay estudiantes inscritos</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </section>
+    </main>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js" integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="assets/js/main.js"></script>
 </body>
+
 </html>
